@@ -11,6 +11,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-nodeunit": "~0.3.0",
+    "grunt-contrib-connect": "^0.8.0",
     "mustache": "~0.8.1",
     "matchdep": "~0.3.0",
     "dive": "^0.3.1",
